# base-accessors_

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  README.md  askap_accessors.cc.in  askap_accessors.h  dependencies.cmake
apps/: CMakeLists.txt  extractslice.cc  imageToFITS.cc  tDataAccess.cc  tImageReadBinaryTable.cc  tImageWrite.cc  tImageWriteBinaryTable.cc  tReadWriteBinarySpectrumTable.cc  tTableCalSolution.cc  tVOTable.cc  tVerifyUVW.cc  tWriteBinarySpectrumTable.cc
askap/calibaccess/: CMakeLists.txt  CachedCalSolutionAccessor.cc  CachedCalSolutionAccessor.h  CalParamNameHelper.cc  CalParamNameHelper.h  CalibAccessFactory.cc  ChanAdapterCalSolutionConstAccessor.cc  ChanAdapterCalSolutionConstAccessor.h  ChanAdapterCalSolutionConstSource.cc  ChanAdapterCalSolutionConstSource.h  ICalSolutionAccessor.cc  ICalSolutionAccessor.h  ICalSolutionConstAccessor.cc  ICalSolutionConstAccessor.h  ICalSolutionConstSource.cc  ICalSolutionConstSource.h  ICalSolutionFiller.h  IonoTerm.h  JonesDTerm.h  JonesIndex.cc  JonesIndex.h  MemCalSolutionAccessor.cc  MemCalSolutionAccessor.h  ParsetCalSolutionAccessor.cc  ParsetCalSolutionAccessor.h  TableCalSolutionConstSource.cc  TableCalSolutionConstSource.h  TableCalSolutionFiller.cc  TableCalSolutionFiller.h  TableCalSolutionSource.cc  TableCalSolutionSource.h
askap/dataaccess/: BasicDataConverter.cc  BasicDataConverter.h  BestWPlaneDataAccessor.cc  BestWPlaneDataAccessor.h  CMakeLists.txt  DDCalBufferDataAccessor.cc  DDCalBufferDataAccessor.h  DDCalOnDemandNoiseAndFlagDA.cc  DDCalOnDemandNoiseAndFlagDA.h  DataAccessorAdapter.cc  DataAccessorAdapter.h  DataAccessorStub.cc  DataAccessorStub.h  DataIteratorAdapter.cc  DataIteratorAdapter.h  DataIteratorStub.cc  DataIteratorStub.h  DirectionConverter.cc  DirectionConverter.h  DopplerConverter.cc  DopplerConverter.h  EpochConverter.cc  EpochConverter.h  FakeSingleStepIterator.cc  FakeSingleStepIterator.h  FeedSubtableHandler.cc  FeedSubtableHandler.h  FieldSubtableHandler.cc  FieldSubtableHandler.h  GenericConverter.h  IAntennaSubtableHandler.h  IBufferManager.h  IConstDataAccessor.h  IConstDataIterator.h  IDataAccessor.h  IDataConverter.h  IDataConverterImpl.h  IDataIterator.h  IDataSelector.h  IDirectionConverter.h  (+82 more)
askap/imageaccess/: ADIOSImage.h  ADIOSImage.tcc  BeamLogger.cc  BeamLogger.h  CMakeLists.txt  CasaADIOSImageAccess.h  CasaADIOSImageAccess.tcc  CasaADIOSImageAccessParallel.h  CasaADIOSImageAccessParallel.tcc  CasaImageAccess.cc  CasaImageAccess.h  CasaImageAccess.tcc  FITSImageRW.cc  FITSImageRW.h  FitsAuxImageSpectra.cc  FitsAuxImageSpectra.h  FitsImageAccess.cc  FitsImageAccess.h  FitsImageAccessParallel.cc  FitsImageAccessParallel.h  IImageAccess.cc  IImageAccess.h  IImageAccess.tcc  ImageAccessFactory.cc  ImageAccessFactory.h  Utils.h  WeightsLog.cc  WeightsLog.h
askap/votable/: CMakeLists.txt  VOTable.cc  VOTableField.cc  VOTableGroup.cc  VOTableInfo.cc  VOTableParam.cc  VOTableResource.cc  VOTableRow.cc  VOTableTable.cc  XercescUtils.cc
askap/votable2/: CMakeLists.txt  TinyXml2Utils.cc  TinyXml2Utils.h  VOTable2.cc  VOTable2.h  VOTableCooSys2.cc  VOTableCooSys2.h  VOTableField2.cc  VOTableField2.h  VOTableGroup2.cc  VOTableGroup2.h  VOTableInfo2.cc  VOTableInfo2.h  VOTableParam2.cc  VOTableParam2.h  VOTableResource2.cc  VOTableResource2.h  VOTableRow2.cc  VOTableRow2.h  VOTableTable2.cc  VOTableTable2.h  VOTableTimeSys2.cc  VOTableTimeSys2.h  votable-00.xml
calibaccess/: CMakeLists.txt  ICalSolutionConstAccessor.cc
cmake/: FindAskapParallel.cmake  FindScimath.cmake  askap-accessors-config.cmake.in
dataaccess/: CMakeLists.txt  FeedSubtableHandler.cc
imageaccess/: CMakeLists.txt
tests/calibaccess/: CMakeLists.txt  CachedCalSolutionTest.h  CalParamNameHelperTest.h  MemCalSolutionAccessorTest.h  ParsetCalSolutionTest.h  TableCalSolutionTest.h
tests/dataaccess/: CMakeLists.txt  DataAccessTestImpl.cc  DataAccessorAdapterTest.h  DataConverterTest.h  StackableAdapterTest.h  TableDataAccessTest.h  TableTestRunner.h  UVWMachineCacheTest.h  tdataaccess.cc
tests/imageaccess/: CMakeLists.txt  CasaADIOSImageAccessTest.h  CasaImageAccessTest.h  FitsImageAccessTest.h  WeightsLogTest.h  timageaccess.cc
tests/votable/: CMakeLists.txt
tests/votable2/: .VOTableTest.h.swp  CMakeLists.txt  VOTableTest.h  tvotable2.cc
