add_sources_to_accessors(
CachedCalSolutionAccessor.cc
CalSolutionConstSourceStub.cc
CalSolutionSourceStub.cc
CalibAccessFactory.cc
ChanAdapterCalSolutionConstAccessor.cc
ChanAdapterCalSolutionConstSource.cc
ICalSolutionAccessor.cc
ICalSolutionConstAccessor.cc
ICalSolutionConstSource.cc
MemCalSolutionAccessor.cc
ParsetCalSolutionAccessor.cc
ParsetCalSolutionConstSource.cc
ParsetCalSolutionSource.cc
ServiceCalSolutionSourceStub.cc
TableCalSolutionConstSource.cc
TableCalSolutionFiller.cc
TableCalSolutionSource.cc
)

install (
FILES
CachedCalSolutionAccessor.h
CalParamNameHelper.h
CalSolutionConstSourceStub.h
CalSolutionSourceStub.h
CalibAccessFactory.h
ChanAdapterCalSolutionConstAccessor.h
ChanAdapterCalSolutionConstSource.h
ICalSolutionAccessor.h
ICalSolutionConstAccessor.h
ICalSolutionConstSource.h
ICalSolutionFiller.h
ICalSolutionSource.h
IonoTerm.h
JonesDTerm.h
JonesIndex.h
JonesJTerm.h
MemCalSolutionAccessor.h
ParsetCalSolutionAccessor.h
ParsetCalSolutionConstSource.h
ParsetCalSolutionSource.h
ServiceCalSolutionSourceStub.h
TableCalSolutionConstSource.h
TableCalSolutionFiller.h
TableCalSolutionSource.h

DESTINATION include/askap/calibaccess
)

